# unctrl

./: CMakeLists.txt  LICENSE.txt  README.md  build.sh  readme.md
include/: game.hpp  player.hpp
src/: game.cpp  main.cpp  player.cpp
src/client/: client_main.cpp  net.cpp
src/server/: net.cpp  net.hpp  server_main.cpp
src/shared/: game_state.cpp  game_state.hpp  gamestate.hpp  packets.hpp
